# processes

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  start.sh
app/: redis.py
modules/: const.py  utils.py
modules/database/: exports.py  scheams.py
modules/processes/: views.py
modules/processes/schemas/: request.py  response.py
